fix(wezterm): change selection background color for readability

--- a/extras/wezterm/bamboo.toml
+++ b/extras/wezterm/bamboo.toml
@@ -25,7 +25,7 @@ cursor_border = "#fff8f0"
 cursor_fg = "#0f0800"
 foreground = "#f1e9d2"
 scrollbar_thumb = "#1c1e1b"
-selection_bg = "#2f312c"
+selection_bg = "#5b5e5a"
 selection_fg = "#f1e9d2"
 split = "#3a3d37"
 visual_bell = "#383b35"
