--- a/extras/wezterm/bamboo_multiplex.toml
+++ b/extras/wezterm/bamboo_multiplex.toml
@@ -25,7 +25,7 @@ cursor_border = "#fff8f0"
 cursor_fg = "#0f0800"
 foreground = "#ece1c0"
 scrollbar_thumb = "#171f17"
-selection_bg = "#2d312c"
+selection_bg = "#5a5e5a"
 selection_fg = "#ece1c0"
 split = "#383d37"
 visual_bell = "#363b35"
