--- a/extras/wezterm/bamboo.toml
+++ b/extras/wezterm/bamboo.toml
@@ -27,7 +27,8 @@ foreground = "#f1e9d2"
 scrollbar_thumb = "#1c1e1b"
 selection_bg = "#5b5e5a"
 selection_fg = "#f1e9d2"
-split = "#3a3d37"
+split = "#838781"
+compose_cursor = "#ff9966"
 visual_bell = "#383b35"
 
 [colors.indexed]
