--- a/extras/wezterm/bamboo_light.toml
+++ b/extras/wezterm/bamboo_light.toml
@@ -1,52 +1,52 @@
 [colors]
 ansi = [
-    "#1c1e1b",
-    "#e75a7c",
-    "#8fb573",
-    "#dbb671",
-    "#57a5e5",
-    "#aaaaff",
-    "#70c2be",
-    "#f1e9d2",
+    "#dadac2",
+    "#c72a3c",
+    "#4fa533",
+    "#bb9651",
+    "#1765d5",
+    "#8a4adf",
+    "#00a2be",
+    "#3a4238",
 ]
-background = "#252623"
+background = "#fafae0"
 brights = [
-    "#5b5e5a",
-    "#e75a7c",
-    "#8fb573",
-    "#dbb671",
-    "#57a5e5",
-    "#aaaaff",
-    "#70c2be",
-    "#f1e9d2",
+    "#c7c7af",
+    "#c72a3c",
+    "#4fa533",
+    "#bb9651",
+    "#1765d5",
+    "#8a4adf",
+    "#00a2be",
+    "#252623",
 ]
-cursor_bg = "#fff8f0"
-cursor_border = "#fff8f0"
-cursor_fg = "#0f0800"
-foreground = "#f1e9d2"
-scrollbar_thumb = "#1c1e1b"
-selection_bg = "#5b5e5a"
-selection_fg = "#f1e9d2"
+cursor_bg = "#0f0800"
+cursor_border = "#0f0800"
+cursor_fg = "#fff8f0"
+foreground = "#3a4238"
+scrollbar_thumb = "#c7c7af"
+selection_bg = "#a1a7a0"
+selection_fg = "#3a4238"
 split = "#838781"
-compose_cursor = "#ff9966"
-visual_bell = "#383b35"
+compose_cursor = "#df7946"
+visual_bell = "#e4e4cc"
 
 [colors.indexed]
 
 [colors.tab_bar]
-background = "#1c1e1b"
-inactive_tab_edge = "#3a3d37"
+background = "#e4e4cc"
+inactive_tab_edge = "#dadac2"
 
 [colors.tab_bar.active_tab]
-bg_color = "#f1e9d2"
-fg_color = "#111210"
+bg_color = "#3a4238"
+fg_color = "#fafae0"
 intensity = "Normal"
 italic = false
 strikethrough = false
 underline = "None"
 
 [colors.tab_bar.inactive_tab]
-bg_color = "#3a3d37"
+bg_color = "#c7c7af"
 fg_color = "#5b5e5a"
 intensity = "Normal"
 italic = false
@@ -54,16 +54,16 @@ strikethrough = false
 underline = "None"
 
 [colors.tab_bar.inactive_tab_hover]
-bg_color = "#2f312c"
-fg_color = "#838781"
+bg_color = "#838781"
+fg_color = "#dadac2"
 intensity = "Normal"
 italic = true
 strikethrough = false
 underline = "None"
 
 [colors.tab_bar.new_tab]
-bg_color = "#5b5e5a"
-fg_color = "#f1e9d2"
+bg_color = "#a1a7a0"
+fg_color = "#dadac2"
 intensity = "Normal"
 italic = false
 strikethrough = false
@@ -71,13 +71,13 @@ underline = "None"
 
 [colors.tab_bar.new_tab_hover]
 bg_color = "#838781"
-fg_color = "#f1e9d2"
+fg_color = "#3a4238"
 intensity = "Normal"
 italic = false
 strikethrough = false
 underline = "None"
 
 [metadata]
-name = 'Bamboo'
+name = 'Bamboo Light'
 author = 'Riley Bruins'
 origin_url = "https://github.com/ribru17/bamboo.nvim"
