feat(multiplex): much better contrast

--- a/extras/alacritty/bamboo_multiplex.toml
+++ b/extras/alacritty/bamboo_multiplex.toml
@@ -9,9 +9,9 @@ black = '0x171f17'
 red = '0xdc4f62'
 green = '0x81af58'
 yellow = '0xcebe69'
-blue = '0x5692c4'
-magenta = '0xae93e0'
-cyan = '0x71ada2'
+blue = '0x409cdc'
+magenta = '0xa09af8'
+cyan = '0x68baae'
 white = '0xece1c0'
 
 # Bright colors
@@ -20,7 +20,7 @@ black = '0x5a5e5a'
 red = '0xdc4f62'
 green = '0x81af58'
 yellow = '0xcebe69'
-blue = '0x5692c4'
-magenta = '0xae93e0'
-cyan = '0x71ada2'
+blue = '0x409cdc'
+magenta = '0xa09af8'
+cyan = '0x68baae'
 white = '0xfff8f0'
