--- a/extras/kitty/bamboo_multiplex.conf
+++ b/extras/kitty/bamboo_multiplex.conf
@@ -23,14 +23,14 @@ color10 #81af58
 color3  #cebe69
 color11 #cebe69
 
-color4  #5692c4
-color12 #5692c4
+color4  #409cdc
+color12 #409cdc
 
-color5  #ae93e0
-color13 #ae93e0
+color5  #a09af8
+color13 #a09af8
 
-color6  #71ada2
-color14 #71ada2
+color6  #68baae
+color14 #68baae
 
 color7  #ece1c0
 color15 #fff8f0
