--- a/extras/vivid/bamboo_multiplex.yml
+++ b/extras/vivid/bamboo_multiplex.yml
@@ -1,10 +1,10 @@
 colors:
   # Theme colors
   background_color: "171f17"
-  purple: "ae93e0"
+  purple: "a09af8"
   khaki: "dcbf84"
   pink: "dc4f62"
-  cyan: "71ada2"
+  cyan: "68baae"
   green: "81af58"
   orange: "cebe69"
 
