feat: increase contrast of yellows

--- a/extras/kitty/bamboo_multiplex.conf
+++ b/extras/kitty/bamboo_multiplex.conf
@@ -20,8 +20,8 @@ color9  #dc4f62
 color2  #81af58
 color10 #81af58
 
-color3  #cebe69
-color11 #cebe69
+color3  #ceba49
+color11 #ceba49
 
 color4  #409cdc
 color12 #409cdc
