--- a/extras/wezterm/bamboo_multiplex.toml
+++ b/extras/wezterm/bamboo_multiplex.toml
@@ -3,7 +3,7 @@ ansi = [
     "#171f17",
     "#dc4f62",
     "#81af58",
-    "#cebe69",
+    "#ceba49",
     "#409cdc",
     "#a09af8",
     "#68baae",
@@ -14,7 +14,7 @@ brights = [
     "#5a5e5a",
     "#dc4f62",
     "#81af58",
-    "#cebe69",
+    "#ceba49",
     "#409cdc",
     "#a09af8",
     "#68baae",
