--- a/extras/alacritty/bamboo_multiplex.toml
+++ b/extras/alacritty/bamboo_multiplex.toml
@@ -8,7 +8,7 @@ foreground = '0xece1c0'
 black = '0x171f17'
 red = '0xdc4f62'
 green = '0x81af58'
-yellow = '0xcebe69'
+yellow = '0xceba49'
 blue = '0x409cdc'
 magenta = '0xa09af8'
 cyan = '0x68baae'
@@ -19,7 +19,7 @@ white = '0xece1c0'
 black = '0x5a5e5a'
 red = '0xdc4f62'
 green = '0x81af58'
-yellow = '0xcebe69'
+yellow = '0xceba49'
 blue = '0x409cdc'
 magenta = '0xa09af8'
 cyan = '0x68baae'
