--- a/extras/kitty/bamboo_light.conf
+++ b/extras/kitty/bamboo_light.conf
@@ -20,8 +20,8 @@ color9  #c72a3c
 color2  #4fa533
 color10 #4fa533
 
-color3  #bb9631
-color11 #bb9631
+color3  #a77b00
+color11 #a77b00
 
 color4  #1745d5
 color12 #1745d5
