fix: improve cyan contrast on light theme

--- a/extras/alacritty/bamboo_light.toml
+++ b/extras/alacritty/bamboo_light.toml
@@ -11,7 +11,7 @@ green = '0x4fa533'
 yellow = '0xbb9631'
 blue = '0x1745d5'
 magenta = '0x8a4adf'
-cyan = '0x00a2be'
+cyan = '0x188a9e'
 white = '0x3a4238'
 
 # Bright colors
@@ -22,5 +22,5 @@ green = '0x4fa533'
 yellow = '0xbb9631'
 blue = '0x1745d5'
 magenta = '0x8a4adf'
-cyan = '0x00a2be'
+cyan = '0x188a9e'
 white = '0x252623'
