--- a/extras/kitty/bamboo_light.conf
+++ b/extras/kitty/bamboo_light.conf
@@ -29,8 +29,8 @@ color12 #1745d5
 color5  #8a4adf
 color13 #8a4adf
 
-color6  #00a2be
-color14 #00a2be
+color6  #188a9e
+color14 #188a9e
 
 color7  #3a4238
 color15 #252623
