--- a/extras/vivid/bamboo_light.yml
+++ b/extras/vivid/bamboo_light.yml
@@ -4,7 +4,7 @@ colors:
   purple: "8a4adf"
   khaki: "855505"
   pink: "c72a3c"
-  cyan: "00a2be"
+  cyan: "188a9e"
   green: "4fa533"
   orange: "bb9631"
 
