fix: improve contrast for green in light theme

--- a/extras/kitty/bamboo_light.conf
+++ b/extras/kitty/bamboo_light.conf
@@ -17,8 +17,8 @@ color8  #c7c7af
 color1  #c72a3c
 color9  #c72a3c
 
-color2  #4fa533
-color10 #4fa533
+color2  #27850b
+color10 #27850b
 
 color3  #a77b00
 color11 #a77b00
