--- a/extras/alacritty/bamboo_light.toml
+++ b/extras/alacritty/bamboo_light.toml
@@ -7,7 +7,7 @@ foreground = '0x3a4238'
 [colors.normal]
 black = '0xc7c7af'
 red = '0xc72a3c'
-green = '0x4fa533'
+green = '0x27850b'
 yellow = '0xbb9631'
 blue = '0x1745d5'
 magenta = '0x8a4adf'
@@ -18,7 +18,7 @@ white = '0x3a4238'
 [colors.bright]
 black = '0xa1a7a0'
 red = '0xc72a3c'
-green = '0x4fa533'
+green = '0x27850b'
 yellow = '0xbb9631'
 blue = '0x1745d5'
 magenta = '0x8a4adf'
